# PressReady

./: .gitignore  AGENTS.md  AppxManifest.xml  CHANGELOG.md  HANDOFF.md  LICENSE  LICENSING.md  Laydown.spec  NOTICE  PressReady.spec  README.md  ROADMAP.md  build_msix.ps1  codegraph.json  pyproject.toml
.github/workflows/: deploy.yml  release.yml
_legacy/v1/: ProjectContext.md  README.md
docs/ai/: DECISIONS.md  DESIGN_SYSTEM.md  GOTCHAS.md  REFERENCE_STUDY.md  START_HERE.md
docs/store/: LISTING.md  SUBMISSION.md
framer-demo/: index.html  package-lock.json  package.json
framer-demo/src/: App.jsx  index.css
laydown/: __init__.py  __main__.py
laydown/engine/: capabilities.py  data_model.py  geometry.py  impose.py  marks.py  preflight.py  preprocessors.py
laydown/ui/: components.py  help.py  icons.py  main_window.py  marks_tab.py  panel.py  preprocessors_tab.py  presets.py  preview_panel.py  schema.py  theme.py
packaging/linux/: build.sh
packaging/macos/: build.sh
packaging/windows/: build.ps1
pressready/: __init__.py  __main__.py  version.py
pressready/engine/: data_model.py  geometry.py  impose.py  marks.py
pressready/tools/: __init__.py  generate_sample_pdf.py  pdf_info.py
pressready/ui/: main_window.py  marks_tab.py  panel.py  preprocessors_tab.py  preview_panel.py  theme.py
site/: astro.config.mjs  package-lock.json  package.json
site/public/: llms.txt  robots.txt  sitemap.xml
tests/: helpers.py  test_booklet_order.py  test_capabilities.py  test_determinism.py  test_engine_robustness.py  test_icons.py  test_impose.py  test_layout_depth.py  test_marks_units_preflight.py  test_packaging.py  test_panel.py  test_preview_overlay.py  test_preview_zoom.py  test_roundtrip.py  test_source_boxes.py  test_utils.py
v2/: README.md
(+21 files in other folders)
